--- a/src/ErrorAlert/style.css
+++ b/src/ErrorAlert/style.css
@@ -12,9 +12,10 @@
 }
 
 .layout_base {
+  overflow: auto;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  height: 80%;
+  height: 100%;
   align-items: center;
   padding: 0 12%;
 }
@@ -55,6 +56,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 6%;
 }
 
 @keyframes ANIM_GRAPHIC {
@@ -81,6 +83,7 @@
 
 .layout_text {
   color: #1c3f5f;
+  margin-bottom: 6%;
 }
 
 .title_with_divider {
